Se han creada nuevas entidades de inmueble y se han hecho sus viewmodel

--- a/ParcialP3.WEB/Views/Login/AccesDenied.cshtml
+++ b/ParcialP3.WEB/Views/Login/AccesDenied.cshtml
@@ -1,4 +1,5 @@
-﻿@inject ParcialP3.Application.Interfaces.IUserSeccion userSession;
+﻿@using ParcialP3.Application.ViewModels.Users
+@inject ParcialP3.Application.Interfaces.IUserSeccion userSession;
 
 @{
     UsersViewModel? user = userSession.GetUserSeccion();
