--- a/ParcialP3.WEB/Views/Login/Register.cshtml
+++ b/ParcialP3.WEB/Views/Login/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model RegisterUsersViewModel
+﻿@using ParcialP3.Application.ViewModels.Users
+@model RegisterUsersViewModel
 
 @{
     ViewData["Title"] = "Registro de Usuario";
