--- a/ParcialP3.WEB/Views/Users/Create.cshtml
+++ b/ParcialP3.WEB/Views/Users/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model ParcialP3.Application.ViewModels.AddUsersViewModel
+﻿@using ParcialP3.Application.ViewModels.Users
+@model AddUsersViewModel
 
 @{
     ViewData["Title"] = "Crear Usuario";
