--- a/ParcialP3.WEB/Views/Users/Delete.cshtml
+++ b/ParcialP3.WEB/Views/Users/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model ParcialP3.Application.ViewModels.RemoveUserViewModel
+﻿@using ParcialP3.Application.ViewModels.Users
+@model RemoveUserViewModel
 
 @{
     ViewData["Title"] = "Eliminar Usuario";
