--- a/ParcialP3.WEB/Views/Users/Edit.cshtml
+++ b/ParcialP3.WEB/Views/Users/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model ParcialP3.Application.ViewModels.UpdateUsersViewModel
+﻿@using ParcialP3.Application.ViewModels.Users
+@model UpdateUsersViewModel
 
 @{
     ViewData["Title"] = "Editar Usuario";
