--- a/ParcialP3.WEB/Views/Users/index.cshtml
+++ b/ParcialP3.WEB/Views/Users/index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<ParcialP3.Application.ViewModels.UsersViewModel>
+﻿@using ParcialP3.Application.ViewModels.Users
+@model IEnumerable<UsersViewModel>
 
 @{
     ViewData["Title"] = "Lista de Usuarios";
