--- a/ParcialP3.WEB/Views/Login/Index.cshtml
+++ b/ParcialP3.WEB/Views/Login/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model ParcialP3.Application.ViewModels.LoginViewModel
+﻿@using ParcialP3.Application.ViewModels.Users
+@model LoginViewModel
 
 @{
     ViewData["Title"] = "Login";
