Se crearon los nuevos servicios y vistas de inmueble, condicion, tipoInmueble y Ciudades

--- a/ParcialP3.WEB/Views/Shared/_Layout.cshtml
+++ b/ParcialP3.WEB/Views/Shared/_Layout.cshtml
@@ -32,6 +32,15 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Inmuebles" asp-action="Index">Inmuebles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TipoPropiedad" asp-action="Index">TipoPropiedad</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Condicion" asp-action="Index">Condicion</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logout">Cerrar seccion(@user.Usuario)</a>
                         </li>
                     </ul>
